--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-pandas
-openpyxl
-numpy
-openai
-pandasai
-matplotlib
-seaborn
+streamlit==1.33.0
+pandas==2.2.1
+numpy==1.26.4
+openai==1.30.1
+pandasai==1.5.14
+openpyxl==3.1.2
+matplotlib==3.8.4
+seaborn==0.13.2
+python-dateutil==2.9.0.post0
