--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-
-streamlit==1.33.0
-pandas==1.5.3
-numpy==1.26.4
-openai==1.30.1
-pandasai==1.5.14
-openpyxl==3.1.2
+streamlit
+pandas
+numpy
+openai
+pandasai
+openpyxl
 
