--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Main dependencies
 streamlit==1.33.0
-pandas==1.5.3
+pandas>=2.2.0
 numpy>=1.25.0
 pandasai==2.3.0
 openai
@@ -8,6 +8,7 @@ pyyaml==6.0.1
 openpyxl==3.1.2
 typing-extensions==4.14.0
 httpx==0.27.0
+
 
 
 
